source/CapriKit.Slang/Generated.cs


    public enum CompilerOptionName
    {
        MacroDefine,
        DepFile,
        EntryPointName,
        Specialize,
        Help,
        HelpStyle,
        Include,
        Language,
        MatrixLayoutColumn,
        MatrixLayoutRow,
        ZeroInitialize,
        IgnoreCapabilities,
        RestrictiveCapabilityCheck,
        ModuleName,
        Output,
        Profile,
        Stage,
        Target,
        Version,
        WarningsAsErrors,
        DisableWarnings,
        EnableWarning,
        DisableWarning,
        DumpWarningDiagnostics,
        InputFilesRemain,
        EmitIr,
        ReportDownstreamTime,
        ReportPerfBenchmark,
        ReportCheckpointIntermediates,
        SkipSPIRVValidation,
        SourceEmbedStyle,
        SourceEmbedName,
        SourceEmbedLanguage,
        DisableShortCircuit,
        MinimumSlangOptimization,
        DisableNonEssentialValidations,
        DisableSourceMap,
        UnscopedEnum,
        PreserveParameters,
        Capability,
        DefaultImageFormatUnknown,
        DisableDynamicDispatch,
        DisableSpecialization,
        FloatingPointMode,
        DebugInformation,
        LineDirectiveMode,
        Optimization,
        Obfuscate,
        VulkanBindShift,
        VulkanBindGlobals,
        VulkanInvertY,
        VulkanUseDxPositionW,
        VulkanUseEntryPointName,
        VulkanUseGLLayout,
        VulkanEmitReflection,
        GLSLForceScalarLayout,
        EnableEffectAnnotations,
        EmitSpirvViaGLSL,
        EmitSpirvDirectly,
        SPIRVCoreGrammarJSON,
        IncompleteLibrary,
        CompilerPath,
        DefaultDownstreamCompiler,
        DownstreamArgs,
        PassThrough,
        DumpRepro,
        DumpReproOnError,
        ExtractRepro,
        LoadRepro,
        LoadReproDirectory,
        ReproFallbackDirectory,
        DumpAst,
        DumpIntermediatePrefix,
        DumpIntermediates,
        DumpIr,
        DumpIrIds,
        PreprocessorOutput,
        OutputIncludes,
        ReproFileSystem,
        REMOVED_SerialIR,
        SkipCodeGen,
        ValidateIr,
        VerbosePaths,
        VerifyDebugSerialIr,
        NoCodeGen,
        FileSystem,
        Heterogeneous,
        NoMangle,
        NoHLSLBinding,
        NoHLSLPackConstantBufferElements,
        ValidateUniformity,
        AllowGLSL,
        EnableExperimentalPasses,
        BindlessSpaceIndex,
        SPIRVResourceHeapStride,
        SPIRVSamplerHeapStride,
        ArchiveType,
        CompileCoreModule,
        Doc,
        IrCompression,
        LoadCoreModule,
        ReferenceModule,
        SaveCoreModule,
        SaveCoreModuleBinSource,
        TrackLiveness,
        LoopInversion,
        ParameterBlocksUseRegisterSpaces,
        LanguageVersion,
        TypeConformance,
        EnableExperimentalDynamicDispatch,
        EmitReflectionJSON,
        CountOfParsableOptions,
        DebugInformationFormat,
        VulkanBindShiftAll,
        GenerateWholeProgram,
        UseUpToDateBinaryModule,
        EmbedDownstreamIR,
        ForceDXLayout,
        EmitSpirvMethod,
        SaveGLSLModuleBinSource,
        SkipDownstreamLinking,
        DumpModule,
        GetModuleInfo,
        GetSupportedModuleVersions,
        EmitSeparateDebug,
        DenormalModeFp16,
        DenormalModeFp32,
        DenormalModeFp64,
        UseMSVCStyleBitfieldPacking,
        ForceCLayout,
        ExperimentalFeature,
        ReportDetailedPerfBenchmark,
        ValidateIRDetailed,
        DumpIRBefore,
        DumpIRAfter,
        EmitCPUMethod,
        EmitCPUViaCPP,
        EmitCPUViaLLVM,
        LLVMTargetTriple,
        LLVMCPU,
        LLVMFeatures,
        EnableRichDiagnostics,
        ReportDynamicDispatchSites,
        EnableMachineReadableDiagnostics,
        DiagnosticColor,
        CountOf,
    }

    public enum CompilerOptionValueKind
    {
        Int,
        String,
    }

    public unsafe partial struct CompilerOptionValue
    {
        [NativeTypeName("slang::CompilerOptionValueKind")]
        public CompilerOptionValueKind kind;

        [NativeTypeName("int32_t")]
        public int intValue0;

        [NativeTypeName("int32_t")]
        public int intValue1;

        [NativeTypeName("const char *")]
        public sbyte* stringValue0;

        [NativeTypeName("const char *")]
        public sbyte* stringValue1;
    }

    public partial struct CompilerOptionEntry
    {
        [NativeTypeName("slang::CompilerOptionName")]
        public CompilerOptionName name;

        [NativeTypeName("slang::CompilerOptionValue")]
        public CompilerOptionValue value;
    }

    public partial struct SlangUUID
    {
        [NativeTypeName("uint32_t")]
        public uint data1;

        [NativeTypeName("uint16_t")]
        public ushort data2;

        [NativeTypeName("uint16_t")]
        public ushort data3;

        [NativeTypeName("uint8_t[8]")]
        public _data4_e__FixedBuffer data4;

        [InlineArray(8)]
        public partial struct _data4_e__FixedBuffer
        {
            public byte e0;
        }
    }

    public unsafe partial struct ISlangUnknown
    {
        public void** lpVtbl;

        public static SlangUUID getTypeGuid()
        {
            return new SlangUUID
            {
                data1 = 0x00000000,
                data2 = 0x0000,
                data3 = 0x0000,
                data4 = new byte[8]
                {
                    0xC0,
                    0x00,
                    0x00,
                    0x00,
                    0x00,
                    0x00,
                    0x00,
                    0x46,
                },
            };
        }

        [return: NativeTypeName("SlangResult")]
        public int QueryInterface([NativeTypeName("const struct _GUID &")] _GUID* uuid, void** outObject)
        {
            return queryInterface(unchecked((SlangUUID*)(uuid)), outObject);
        }

        [return: NativeTypeName("uint32_t")]
        public uint AddRef()
        {
            return addRef();
        }

        [return: NativeTypeName("uint32_t")]
        public uint Release()
        {
            return release();
        }

        [return: NativeTypeName("SlangResult")]
        public int queryInterface([NativeTypeName("const SlangUUID &")] SlangUUID* uuid, void** outObject)
        {
            return ((delegate* unmanaged[Stdcall]<ISlangUnknown*, SlangUUID*, void**, int>)(lpVtbl[0]))((ISlangUnknown*)Unsafe.AsPointer(ref this), uuid, outObject);
        }

        [return: NativeTypeName("uint32_t")]
        public uint addRef()
        {
            return ((delegate* unmanaged[Stdcall]<ISlangUnknown*, uint>)(lpVtbl[1]))((ISlangUnknown*)Unsafe.AsPointer(ref this));
        }

        [return: NativeTypeName("uint32_t")]
        public uint release()
        {
            return ((delegate* unmanaged[Stdcall]<ISlangUnknown*, uint>)(lpVtbl[2]))((ISlangUnknown*)Unsafe.AsPointer(ref this));
        }
    }

    [NativeTypeName("struct ISlangCastable : ISlangUnknown")]
    public unsafe partial struct ISlangCastable
    {
        public void** lpVtbl;

        public static SlangUUID getTypeGuid()
        {
            return new SlangUUID
            {
                data1 = 0x00000000,
                data2 = 0x0000,
                data3 = 0x0000,
                data4 = new byte[8]
                {
                    0xC0,
                    0x00,
                    0x00,
                    0x00,
                    0x00,
                    0x00,
                    0x00,
                    0x46,
                },
            };
        }

        [return: NativeTypeName("SlangResult")]
        public int QueryInterface([NativeTypeName("const struct _GUID &")] _GUID* uuid, void** outObject)
        {
            return queryInterface(unchecked((SlangUUID*)(uuid)), outObject);
        }

        [return: NativeTypeName("uint32_t")]
        public uint AddRef()
        {
            return addRef();
        }

        [return: NativeTypeName("uint32_t")]
        public uint Release()
        {
            return release();
        }

        [return: NativeTypeName("SlangResult")]
        public int queryInterface([NativeTypeName("const SlangUUID &")] SlangUUID* uuid, void** outObject)
        {
            return ((delegate* unmanaged[Stdcall]<ISlangCastable*, SlangUUID*, void**, int>)(lpVtbl[0]))((ISlangCastable*)Unsafe.AsPointer(ref this), uuid, outObject);
        }

        [return: NativeTypeName("uint32_t")]
        public uint addRef()
        {
            return ((delegate* unmanaged[Stdcall]<ISlangCastable*, uint>)(lpVtbl[1]))((ISlangCastable*)Unsafe.AsPointer(ref this));
        }

        [return: NativeTypeName("uint32_t")]
        public uint release()
        {
            return ((delegate* unmanaged[Stdcall]<ISlangCastable*, uint>)(lpVtbl[2]))((ISlangCastable*)Unsafe.AsPointer(ref this));
        }

        public void* castAs([NativeTypeName("const SlangUUID &")] SlangUUID* guid)
        {
            return ((delegate* unmanaged[Stdcall]<ISlangCastable*, SlangUUID*, void*>)(lpVtbl[3]))((ISlangCastable*)Unsafe.AsPointer(ref this), guid);
        }
    }

    [NativeTypeName("struct ISlangClonable : ISlangCastable")]
    public unsafe partial struct ISlangClonable
    {
        public void** lpVtbl;

        public static SlangUUID getTypeGuid()
        {
            return new SlangUUID
            {
                data1 = 0x00000000,
                data2 = 0x0000,
                data3 = 0x0000,
                data4 = new byte[8]
                {
                    0xC0,
                    0x00,
                    0x00,
                    0x00,
                    0x00,
                    0x00,
                    0x00,
                    0x46,
                },
            };
        }

        [return: NativeTypeName("SlangResult")]
        public int QueryInterface([NativeTypeName("const struct _GUID &")] _GUID* uuid, void** outObject)
        {
            return queryInterface(unchecked((SlangUUID*)(uuid)), outObject);
        }

        [return: NativeTypeName("uint32_t")]
        public uint AddRef()
        {
            return addRef();
        }

        [return: NativeTypeName("uint32_t")]
        public uint Release()
        {
            return release();
        }

        [return: NativeTypeName("SlangResult")]
        public int queryInterface([NativeTypeName("const SlangUUID &")] SlangUUID* uuid, void** outObject)
        {
            return ((delegate* unmanaged[Stdcall]<ISlangClonable*, SlangUUID*, void**, int>)(lpVtbl[0]))((ISlangClonable*)Unsafe.AsPointer(ref this), uuid, outObject);
        }

        [return: NativeTypeName("uint32_t")]
        public uint addRef()
        {
            return ((delegate* unmanaged[Stdcall]<ISlangClonable*, uint>)(lpVtbl[1]))((ISlangClonable*)Unsafe.AsPointer(ref this));
        }

        [return: NativeTypeName("uint32_t")]
        public uint release()
        {
            return ((delegate* unmanaged[Stdcall]<ISlangClonable*, uint>)(lpVtbl[2]))((ISlangClonable*)Unsafe.AsPointer(ref this));
        }

        public void* castAs([NativeTypeName("const SlangUUID &")] SlangUUID* guid)
        {
            return ((delegate* unmanaged[Stdcall]<ISlangClonable*, SlangUUID*, void*>)(lpVtbl[3]))((ISlangClonable*)Unsafe.AsPointer(ref this), guid);
        }
